Add small LF library and auto-generated LF instances (#77)
Add initial implementation of LogicFuzzer and update RTL patching logic. Updated  
`.gitignore` to include additional test and backup files. Refactored `ailof.py` to  
correct `BACKUP_FILE` reference and improve signal handling logic. Modified  
`rtl_patcher.py` by adding new DPI interface creation for signal fuzzing, enhancing  
backup file management and error handling, and refactoring selected module filtering  
logic. Introduced `LogicFuzzer` by creating `logic_fuzzer.cpp` and `logic_fuzzer.h`  
for modular signal fuzzing in C++ and implementing the `Congest` method for  
randomized congestion simulation. Established better C++ integration to support  
enhanced RTL patching and fuzzing functionalities.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ source/*.json
 designs/*
 backup/
 test.py
+/*.json
+/*.cpp
 test/test_files/designs
 test/test_files/jsons/new_vcd_parser_output.json
 
